Fixing register.css and change overflow: scroll to auto in question.css

--- a/public/assets/css/question.css
+++ b/public/assets/css/question.css
@@ -64,7 +64,7 @@ h1 , h2 , h3 {
 
 .content{
     max-height: 300px;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 400px;
     margin-top: 30px;
 }
